src/App.css
/* ... */
@layer base {
    * {
        @apply border-border outline-ring/50;
    }

    body {
        @apply bg-background text-foreground;
    }
}

.center {
    place-items: center;
    justify-content: center;
    align-items: center;
}

svg {
    display: inline;
}

body {
    font-family: Inter, sans-serif;
    background-color: var(--chart-1);
    color: var(--foreground);
    transition: background-color 0.3s ease, color 0.3s ease;
    background: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='1' cy='1' r='1' fill='%23D9D9D933'/%3E%3C/svg%3E%0A"), radial-gradient(31.64% 56.25% at 100% 0%, #ffffff 0%, transparent 100%), radial-gradient(32.21% 57.27% at 42% 100%, #ffffff 0%, transparent 100%), var(--color-redo-100);
}

.dark body {
    background: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='1' cy='1' r='1' fill='%23D9D9D933'/%3E%3C/svg%3E%0A"), radial-gradient(31.64% 56.25% at 100% 0%, var(--secondary) 0%, transparent 100%), radial-gradient(32.21% 57.27% at 42% 100%, var(--secondary) 0%, transparent 100%), var(--background);
}

body[clean-bg="true"] {
    background: radial-gradient(31.64% 56.25% at 100% 0%, #ffffff 0%, transparent 100%), radial-gradient(32.21% 57.27% at 42% 100%, #ffffff 0%, transparent 100%), var(--color-redo-100);
}

.dark body[clean-bg="true"] {
    background: radial-gradient(31.64% 56.25% at 100% 0%, var(--secondary) 0%, transparent 100%), radial-gradient(32.21% 57.27% at 42% 100%, var(--secondary) 0%, transparent 100%), var(--background);
}

/* Home Screen */

.home-screen-sidebar {
    background: #fff;
    border: var(--tr-100) 1px solid;
    border-left: unset;
    border-radius: 0 1rem 1rem 0;
    transition: background 300ms ease;
    background: linear-gradient(180deg, var(--background) 0%, #e1e1e1 100%);
}

.dark .home-screen-sidebar {
    background: #000;
    background: linear-gradient(180deg, var(--background) 0%, #191919 100%);
}

.home-screen-sidebar.detached {
    margin: 2rem 0;
}

.home-screen-sidebar i {
    text-align: center;
}

.home-screen-sidebar-logo {
    padding-bottom: 0.75rem;
    border-bottom: var(--tr-100) 1px solid;
}

.home-screen-sidebar-buttons {
    padding-top: 0.75rem;
    border-top: var(--tr-100) 1px solid;
}

.home-screen {
    height: calc(100vh - 385px);
    box-sizing: content-box;
}

.home-screen-heading h1 {
    font-size: 2em;
    font-weight: 700;
}

.home-screen-create {
    background-color: oklab(100% 0 -0.00011 / 0.5);
    transition: background-color 300ms var(--redo-easing), transform 300ms var(--redo-easing);
}

.home-screen-create:hover {
    background-color: #fff;
}

.dark .home-screen-create {
    background-color: var(--tr-100);
}

.dark .home-screen-create:hover {
    background-color: var(--tr-200);
}

.home-screen-overlay {
    transition: background 300ms var(--redo-easing);
    border: transparent 0.0625rem solid;
    letter-spacing: 0.03em;
}

.home-screen-overlay:hover {
    border: var(--tr-100) 0.0625rem solid;
}

.home-screen-overlay .tx {
    transition: transform 300ms var(--redo-easing);
}

.home-screen-overlay:hover .tx {
    transform: translateX(1.25rem);
}

.overlay-action-buttons {
    opacity: 0;
    background: var(--tr-50);
    height: fit-content;
    cursor: default;
    transition: opacity 300ms var(--redo-easing);
    transition-delay: 0ms;
}

.home-screen-overlay:hover .overlay-action-buttons,
.trash-overlay:hover .overlay-action-buttons,
.trash-widget:hover .overlay-action-buttons {
    opacity: 1;
    pointer-events: all;
    cursor: pointer;
    transition-delay: 200ms;
}

.overlay-action-buttons button {
    opacity: 0.5;
    transition: opacity 300ms var(--redo-easing);
}

.overlay-action-buttons button:hover {
    opacity: 1;
}

.overlay-action-buttons-divider {
    border-left: var(--tr-100) 0.0625rem solid;
}

p.overlay-last-opened {
    font-size: 12px;
    opacity: .5;
}

.all-overlays-container {
    mask-image: linear-gradient(to right, transparent, #fff 2rem, #fff calc(100% - 4rem), transparent);
    scrollbar-width: thin;
    scrollbar-color: var(--tr-100) transparent;
}

/* Overlay */

.overlay {
    display: block;
    color: var(--foreground);
    /* padding: 3.125rem; */
    box-sizing: border-box;
    transition: padding-top 300ms var(--redo-easing);
    transition-delay: 2000ms;
}

.widgets::after {
    content: '';
    display: block;
    height: 100%;
  }

.ui-container{
    transition: padding-top 300ms var(--redo-easing);
    transition-delay: 2000ms;
    pointer-events: none;
}

.ui-container > *{
    pointer-events: auto;
}

.ui-container:has(.overlay-navbar-container:hover),
.ui-container:has(.overlay-navbar.true),
.ui-container:has(.overlay-navbar.true:hover),
.ui-container:has(.overlay-navbar[data-popover-visible="true"]) {
    padding-top: 6.25rem;
    transition-delay: 0ms;
}

.OverlayButtonContainer {
    bottom: 3.125rem;
    z-index: 1000;
    transition: left 750ms var(--redo-easing);
    left: 3.125rem;
}

.OverlayButtonContainer[data-sidebar-visible="true"] {
    left: 19.4375rem;
}

.depth-shadow {
    box-shadow: 0 0.875rem 1.25rem #00000040;
}

input #file-upload-button {
    background: #ff0000 !important;
}

/* Widget iframe */

.widget-container {
    width: fit-content;
    height: fit-content;

    border-radius: .5rem;
    border: #ffffff10 0.125rem solid;
    background-color: #ffffff05;
    transition: border 300ms ease;
    box-sizing: border-box;
    overflow: hidden;
}

.widget-container:hover {
    border-color: #ffffff20;
}

.widget-container.hide-bg{
    background-color: transparent !important;
    border: none !important;
    box-shadow: unset !important;
}

.hide-bg.widget-container::before {
    backdrop-filter: unset !important;
    filter: unset !important;
}
/* ... */

